Adding content on common page
Adding content, text and image to fill some common page
Adding more dynamism to index page
Fix way to get ArticlePage on index to only get Article and not future Guide

--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -36,9 +36,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'mainapp:guides' %}">Guides</a>
             </li>
-            <li class="nav-item">
+<!--             <li class="nav-item">
               <a class="nav-link" href="{% url 'mainapp:contact' %}">Contact</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="{% url 'mainapp:streamers' %}">Streamers</a>
             </li>
@@ -58,7 +58,8 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+        <p class="m-0 text-center text-white">&copy; Copyright 2018 Fortnite STW FR</p>
+        <p class="m-0 text-center text-white">Hideky</p>
       </div>
       <!-- /.container -->
     </footer>
@@ -66,6 +67,7 @@
     <!-- Bootstrap core JavaScript -->
     <script src="{% static 'mainapp/vendor/jquery/jquery.min.js' %}"></script>
     <script src="{% static 'mainapp/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
   </body>
 
