--- a/mainapp/templates/mainapp/about.html
+++ b/mainapp/templates/mainapp/about.html
@@ -7,15 +7,13 @@
 <div class="container">
 
   <!-- Page Heading/Breadcrumbs -->
-  <h1 class="mt-4 mb-3">About
-    <small>Subheading</small>
-  </h1>
+  <h1 class="mt-4 mb-3">À Propos</h1>
 
   <ol class="breadcrumb">
     <li class="breadcrumb-item">
-      <a href="index.html">Home</a>
+      <a href="index.html">Accueil</a>
     </li>
-    <li class="breadcrumb-item active">About</li>
+    <li class="breadcrumb-item active">À Propos</li>
   </ol>
 
   <!-- Intro Content -->
@@ -24,10 +22,10 @@
       <img class="img-fluid rounded mb-4" src="http://placehold.it/750x450" alt="">
     </div>
     <div class="col-lg-6">
-      <h2>About Modern Business</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+      <h2>À Propos de Fortnite STW FR</h2>
+      <p>Ce site est née de la necessiter d'un projet final de ma formation OpenClassrooms et de ma passion pour le mode Save The World de Fortnite, j'éspère pouvoir vous transmettre à travers ce projet ma passion pour le mode PvE.</p>
+      <p>Vous trouverez sur ce site des news concernant l'évolution du mode Save The World, des guides afin d'exploité tout le contenu de ce mode, ainsi que des outils tel que l'inspection de joueur, l'affichage des missions interessantes ou encore une page permettant la mise en avant des streamers PvE de Fortnite</p>
+      <p>Si vous avez une quelconque question ou suggestion à propos du site, sentez vous libre de nous contacter.</p>
     </div>
   </div>
   <!-- /.row -->
@@ -38,14 +36,14 @@
   <div class="row">
     <div class="col-lg-4 mb-4">
       <div class="card h-100 text-center">
-        <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+        <img class="card-img-top" src="https://i.imgur.com/pVBrApJ.jpg" alt="" style="height: 250px; object-fit: cover;;">
         <div class="card-body">
-          <h4 class="card-title">Team Member</h4>
-          <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+          <h4 class="card-title">Hideky</h4>
+          <h6 class="card-subtitle mb-2 text-muted">Administrateur</h6>
+          <p class="card-text">Développeur Python-Django FullStack</p>
         </div>
         <div class="card-footer">
-          <a href="#">name@example.com</a>
+          <a href="#">Discord: Hideki#5578</a>
         </div>
       </div>
     </div>
@@ -53,12 +51,12 @@
       <div class="card h-100 text-center">
         <img class="card-img-top" src="http://placehold.it/750x450" alt="">
         <div class="card-body">
-          <h4 class="card-title">Team Member</h4>
-          <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+          <h4 class="card-title">Vous ?</h4>
+          <h6 class="card-subtitle mb-2 text-muted">Rédacteur</h6>
+          <p class="card-text">???</p>
         </div>
         <div class="card-footer">
-          <a href="#">name@example.com</a>
+          <a href="#">Discord: ???</a>
         </div>
       </div>
     </div>
@@ -66,38 +64,14 @@
       <div class="card h-100 text-center">
         <img class="card-img-top" src="http://placehold.it/750x450" alt="">
         <div class="card-body">
-          <h4 class="card-title">Team Member</h4>
-          <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+          <h4 class="card-title">Et vous aussi ?</h4>
+          <h6 class="card-subtitle mb-2 text-muted">Rédacteur</h6>
+          <p class="card-text">???</p>
         </div>
         <div class="card-footer">
-          <a href="#">name@example.com</a>
+          <a href="#">Discord: ???</a>
         </div>
       </div>
-    </div>
-  </div>
-  <!-- /.row -->
-
-  <!-- Our Customers -->
-  <h2>Our Customers</h2>
-  <div class="row">
-    <div class="col-lg-2 col-sm-4 mb-4">
-      <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-    </div>
-    <div class="col-lg-2 col-sm-4 mb-4">
-      <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-    </div>
-    <div class="col-lg-2 col-sm-4 mb-4">
-      <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-    </div>
-    <div class="col-lg-2 col-sm-4 mb-4">
-      <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-    </div>
-    <div class="col-lg-2 col-sm-4 mb-4">
-      <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-    </div>
-    <div class="col-lg-2 col-sm-4 mb-4">
-      <img class="img-fluid" src="http://placehold.it/500x300" alt="">
     </div>
   </div>
   <!-- /.row -->
