--- a/mainapp/templates/mainapp/article_page.html
+++ b/mainapp/templates/mainapp/article_page.html
@@ -4,27 +4,42 @@
 {% block title %}{{ self.title }}{% endblock title %}
 
 {% block content %}
+	{% if self.feed_image %}
 	{% image self.feed_image fill-1920x299-c100 as banner_image %}
 	<header style="height: {{banner_image.height}}px; padding-bottom: 20px">
-		<div style="background: url({{banner_image.url}});height: {{banner_image.height}}px;filter:brightness(30%);")>
+		<div style="background: url({{banner_image.url}});height: {{banner_image.height}}px;filter:brightness(30%);background-size: 100%;")>
 			
 		</div>
-		<p style="line-height: {{banner_image.height}}px; text-align: center; color:white; font-style:bold; font-size:50px; position: absolute; top: 55px; width: 100%">{{ self.title }}</p>
+		<h1 style="line-height: {{banner_image.height}}px; text-align: center; color:white; position: absolute; top: 55px; width: 100%">{{ self.title }}</p>
 	</header>
-	<hr>
-	<div class="col-md-8 mx-auto">
-    {% with blocks=self.body %}
-    	{% for block in blocks %}
-            {% if block.block_type == 'heading' %}
-                <h2>{{ block.value }}</h2>
-            {% else %}
-               <section class="block-{{ block.block_type }}">
-                   {{ block }}
-               </section>
-            {% endif %}
-        {% endfor %}
-    
-    {% endwith %}
+	{% else %}
+	<header style="padding-top: 10px">
+		<h1 style="text-align: center;">{{ self.title }}</p>
+	</header>
+	{% endif %}
+	<div class='container'>
+		<hr>
+		<p style='text-align: center'>
+			<span class='fas fa-user'></span>
+			{{self.owner}}&nbsp;
+			<span class='far fa-clock'></span>
+			{{self.first_published_at}}
+		</p>
+		<hr>
+		<div class="col-md-10 mx-auto">
+			{% with blocks=self.body %}
+			{% for block in blocks %}
+			{% if block.block_type == 'heading' %}
+			<h2>{{ block.value }}</h2>
+			{% else %}
+			<section class="block-{{ block.block_type }}">
+				{{ block }}
+			</section>
+			{% endif %}
+			{% endfor %}
+
+			{% endwith %}
+		</div>
+		<hr>
 	</div>
-	<hr>
-{% endblock %}
+	{% endblock %}
