--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -6,33 +6,31 @@
 <header>
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      {% for article in last_articles|slice:':3' %}
+      {% image article.articlepage.feed_image original as banner_image %}
+      <!-- Slide One - Set the background image for this slide in the line below -->
+      {% if forloop.counter0 == 0 %}
+     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      {% else %}
+      <li data-target="#carouselExampleIndicators" data-slide-to="{{forloop.counter0}}"></li>
+      {% endif %}
+      {% endfor %}
     </ol>
     <div class="carousel-inner" role="listbox">
+      {% for article in last_articles %}
+      {% image article.articlepage.feed_image original as banner_image %}
       <!-- Slide One - Set the background image for this slide in the line below -->
-      <div class="carousel-item active" style="background-image: url('http://placehold.it/1900x1080')">
+      {% if forloop.counter0 == 0 %}
+      <div class="carousel-item active" style="background-image: url('{{banner_image.url}}')">
+      {% else %}
+      <div class="carousel-item" style="background-image: url('{{banner_image.url}}')">
+      {% endif %}
         <div class="carousel-caption d-none d-md-block">
-          <h3>First Slide</h3>
-          <p>This is a description for the first slide.</p>
+          <a href="{{article.url}}"><h3>{{ article.title }}</h3></a>
+          <p>{{ article.articlepage.description }}</p>
         </div>
       </div>
-      <!-- Slide Two - Set the background image for this slide in the line below -->
-      <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
-        <div class="carousel-caption d-none d-md-block">
-          <h3>Second Slide</h3>
-          <p>This is a description for the second slide.</p>
-        </div>
-      </div>
-      <!-- Slide Three - Set the background image for this slide in the line below -->
-      <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
-        <div class="carousel-caption d-none d-md-block">
-          <h3>Third Slide</h3>
-          <p>This is a description for the third slide.</p>
-        </div>
-      </div>
-    </div>
+      {% endfor %}
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
@@ -60,7 +58,7 @@
           <h4 class="card-title">
             <a href="{{article.url}}">{{article.title}}</a>
           </h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+          <p class="card-text">{{ article.articlepage.description }}</p>
         </div>
       </div>
     </div>
