Completing Models and Guide and FAQ Page
Adding Raw/Documents blocks to Two columns and Normal
Adding GuidePage, AnswerPage as Content Page
Adding FAQPage, ArticlesPage, GuidesPage as Directory Page
Adding Webhook features to post all published articles on Discord associated to the Site
Adding Twitch integration to get all streamers using our community on Twitch
Completing About Page
Adding some CSS rules to customize site identity

--- a/mainapp/templates/mainapp/about.html
+++ b/mainapp/templates/mainapp/about.html
@@ -11,19 +11,16 @@
 
   <ol class="breadcrumb">
     <li class="breadcrumb-item">
-      <a href="index.html">Accueil</a>
+      <a href="{% url 'mainapp:index' %}">Accueil</a>
     </li>
     <li class="breadcrumb-item active">À Propos</li>
   </ol>
 
   <!-- Intro Content -->
   <div class="row">
-    <div class="col-lg-6">
-      <img class="img-fluid rounded mb-4" src="http://placehold.it/750x450" alt="">
-    </div>
-    <div class="col-lg-6">
+    <div class="col-lg-12">
       <h2>À Propos de Fortnite STW FR</h2>
-      <p>Ce site est née de la necessiter d'un projet final de ma formation OpenClassrooms et de ma passion pour le mode Save The World de Fortnite, j'éspère pouvoir vous transmettre à travers ce projet ma passion pour le mode PvE.</p>
+      <p>Ce site est née de la necessiter d'un projet final de ma formation OpenClassrooms et de ma passion pour le mode Save The World de Fortnite.</br>J'éspère pouvoir vous transmettre à travers ce projet ma passion pour le mode PvE.</p>
       <p>Vous trouverez sur ce site des news concernant l'évolution du mode Save The World, des guides afin d'exploité tout le contenu de ce mode, ainsi que des outils tel que l'inspection de joueur, l'affichage des missions interessantes ou encore une page permettant la mise en avant des streamers PvE de Fortnite</p>
       <p>Si vous avez une quelconque question ou suggestion à propos du site, sentez vous libre de nous contacter.</p>
     </div>
@@ -36,40 +33,27 @@
   <div class="row">
     <div class="col-lg-4 mb-4">
       <div class="card h-100 text-center">
-        <img class="card-img-top" src="https://i.imgur.com/pVBrApJ.jpg" alt="" style="height: 250px; object-fit: cover;;">
+        <img class="card-img-top" src="https://i.imgur.com/mYpZery.png" alt="" style="height: 250px; object-fit: cover;">
         <div class="card-body">
           <h4 class="card-title">Hideky</h4>
           <h6 class="card-subtitle mb-2 text-muted">Administrateur</h6>
           <p class="card-text">Développeur Python-Django FullStack</p>
         </div>
         <div class="card-footer">
-          <a href="#">Discord: Hideki#5578</a>
+          <i class="fab fa-discord"></i> Hideki#5578</span>
         </div>
       </div>
     </div>
     <div class="col-lg-4 mb-4">
       <div class="card h-100 text-center">
-        <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+        <img class="card-img-top" src="https://i.imgur.com/mbvFpFk.png" alt="" style="height: 250px; object-fit: cover;">
         <div class="card-body">
-          <h4 class="card-title">Vous ?</h4>
+          <h4 class="card-title">Gnash69</h4>
           <h6 class="card-subtitle mb-2 text-muted">Rédacteur</h6>
-          <p class="card-text">???</p>
+          <p class="card-text">Commandant d'un bouclier anti-tempête d'au moins 9 survivants.</br>On l'appelle la « Terreur de Fontainebois »</p>
         </div>
         <div class="card-footer">
-          <a href="#">Discord: ???</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-4 mb-4">
-      <div class="card h-100 text-center">
-        <img class="card-img-top" src="http://placehold.it/750x450" alt="">
-        <div class="card-body">
-          <h4 class="card-title">Et vous aussi ?</h4>
-          <h6 class="card-subtitle mb-2 text-muted">Rédacteur</h6>
-          <p class="card-text">???</p>
-        </div>
-        <div class="card-footer">
-          <a href="#">Discord: ???</a>
+          <span><i class="fab fa-discord"></i> Gnash69#7048</span>
         </div>
       </div>
     </div>
