--- a/mainapp/templates/mainapp/guides.html
+++ b/mainapp/templates/mainapp/guides.html
@@ -19,7 +19,7 @@
   </ol>
 
   <!-- Image Header -->
-  <img class="img-fluid rounded mb-4" src="/images/uwfwOYLtb8ikkZ-34QMRieisn0g=/2/fill-1200x300-c100/" alt="">
+  <img class="img-fluid rounded mb-4" src="https://i.imgur.com/XunHg60.jpg" alt="">
 
   <!-- Marketing Icons Section -->
   <div class="row">
