--- a/mainapp/templates/mainapp/article_page.html
+++ b/mainapp/templates/mainapp/article_page.html
@@ -7,10 +7,10 @@
 	{% if self.feed_image %}
 	{% image self.feed_image fill-1920x299-c100 as banner_image %}
 	<header style="height: {{banner_image.height}}px; padding-bottom: 20px">
-		<div style="background: url({{banner_image.url}});height: {{banner_image.height}}px;filter:brightness(30%);background-size: 100%;")>
+		<div class='article-thumbnail' style="background: url({{banner_image.url}}); height: {{banner_image.height}}px;")>
 			
 		</div>
-		<h1 style="line-height: {{banner_image.height}}px; text-align: center; color:white; position: absolute; top: 55px; width: 100%">{{ self.title }}</p>
+		<h1 class='article-title' style="line-height: {{banner_image.height}}px">{{ self.title }}</p>
 	</header>
 	{% else %}
 	<header style="padding-top: 10px">
