--- a/mainapp/templates/mainapp/blocks/two_column_block.html
+++ b/mainapp/templates/mainapp/blocks/two_column_block.html
@@ -1,9 +1,9 @@
 <div class="row">
  
-    <div class="col-md-6">
+    <div class="col-md-6" style='vertical-align: middle;'>
            {{ self.left_column }}
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6" style='vertical-align: middle;'>
            {{ self.right_column }}
      </div>
  
