--- a/mainapp/templates/mainapp/contact.html
+++ b/mainapp/templates/mainapp/contact.html
@@ -8,12 +8,11 @@
 
       <!-- Page Heading/Breadcrumbs -->
       <h1 class="mt-4 mb-3">Contact
-        <small>Subheading</small>
       </h1>
 
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="index.html">Home</a>
+          <a href="{% url 'mainapp:index' %}">Home</a>
         </li>
         <li class="breadcrumb-item active">Contact</li>
       </ol>
