Fix Guide Description preview

--- a/mainapp/templates/mainapp/guides.html
+++ b/mainapp/templates/mainapp/guides.html
@@ -28,7 +28,7 @@
       <div class="card h-100">
         <h4 class="card-header">{{ guide.title }}</h4>
         <div class="card-body">
-          <p class="card-text">{{ guide.articlepage.description }}</p>
+          <p class="card-text">{{ guide.guidepage.description }}</p>
         </div>
         <div class="card-footer">
           <a href="{{ guide.url }}" class="btn btn-primary">Lire</a>
