--- a/mainapp/templates/mainapp/about.html
+++ b/mainapp/templates/mainapp/about.html
@@ -28,7 +28,7 @@
   <!-- /.row -->
 
   <!-- Team Members -->
-  <h2>Our Team</h2>
+  <h2>Notre équipe</h2>
 
   <div class="row">
     <div class="col-lg-4 mb-4">
