--- a/mainapp/templates/mainapp/about.html
+++ b/mainapp/templates/mainapp/about.html
@@ -7,21 +7,14 @@
 <div class="container">
 
   <!-- Page Heading/Breadcrumbs -->
-  <h1 class="mt-4 mb-3">À Propos</h1>
-
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item">
-      <a href="{% url 'mainapp:index' %}">Accueil</a>
-    </li>
-    <li class="breadcrumb-item active">À Propos</li>
-  </ol>
+  <h1 class="mt-4 mb-3">À Propos de Fortnite STW FR</h1>
 
   <!-- Intro Content -->
   <div class="row">
     <div class="col-lg-12">
-      <h2>À Propos de Fortnite STW FR</h2>
-      <p>Ce site est née de la necessiter d'un projet final de ma formation OpenClassrooms et de ma passion pour le mode Save The World de Fortnite.</br>J'éspère pouvoir vous transmettre à travers ce projet ma passion pour le mode PvE.</p>
-      <p>Vous trouverez sur ce site des news concernant l'évolution du mode Save The World, des guides afin d'exploité tout le contenu de ce mode, ainsi que des outils tel que l'inspection de joueur, l'affichage des missions interessantes ou encore une page permettant la mise en avant des streamers PvE de Fortnite</p>
+      <p>Ce site est né de la nécessité d'un projet final de ma formation OpenClassrooms et de ma passion pour le mode Save The World de Fortnite.</br>
+      J'espère pouvoir vous transmettre à travers ce projet ma passion pour le mode PvE.</p>
+      <p>Vous trouverez sur ce site des news concernant l'évolution du mode Save The World, des guides afin d'exploiter tout le contenu de ce mode, ainsi que des outils tels que l'inspection de joueur, l'affichage des missions intéressantes ou encore une page permettant la mise en avant des streamers PvE de Fortnite.</p>
       <p>Si vous avez une quelconque question ou suggestion à propos du site, sentez vous libre de nous contacter.</p>
     </div>
   </div>
