--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -15,13 +15,17 @@
     <title>{% block title %}{% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{% static 'mainapp/vendor/bootstrap/css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'mainapp/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="{% static 'mainapp/css/main.css' %}" rel="stylesheet">
 
   </head>
-
+  <span>
+<div style="background: url('https://fortnite-stw.fr/images/c0pt5PuvqlaFRqCo2Frkw5XZ7M0=/58/original/') no-repeat;  background-size: 100%; width: 50px; height: 50px"></div>
+<div style="background: url('https://fortnite-stw.fr/images/T4LeF3h3RcWOax318KgxE7ZKNTg=/53/original/') no-repeat;  background-size: 100%; width: 50px; height: 50px"></div>
+<div style="background: url('https://fortnite-stw.fr/images/-E3DWrSf_-5JgGgaGxq7xC1yx1k=/60/original/') no-repeat;  background-size: 100%; width: 50px; height: 50px"></div>
+<div style="background: url('https://fortnite-stw.fr/images/nsydLENWpMBIuBsc1bJJz0-j-1U=/62/original/') no-repeat;  background-size: 100%; width: 50px; height: 50px"></div></span>
   <body>
 
     <!-- Navigation -->
@@ -54,7 +58,6 @@
     </nav>
 
     {%block content %}{%endblock%}
-    <iframe src="https://discordapp.com/widget?id=459515720049623051&theme=dark" width="300" height="500" allowtransparency="true" frameborder="0" style='position: fixed; right: 0px; bottom: 0px;'></iframe>
     </div>
     <!-- /.container -->
 
