--- a/mainapp/templates/mainapp/faq.html
+++ b/mainapp/templates/mainapp/faq.html
@@ -14,9 +14,9 @@
   <div class="mb-4" id="accordion">
   {% for answer in answers %}
     <div class="card">
-      <div class="card-header" id="headingOne">
+      <div class="card-header faq-card" id="headingOne">
         <h5 class="mb-0">
-          <button class="btn btn-link" data-toggle="collapse" data-target="#collapse{{answer.id}}" aria-expanded="true" aria-controls="collapse{{answer.id}}">
+          <button class="btn btn-link faq-title" data-toggle="collapse" data-target="#collapse{{answer.id}}" aria-expanded="true" aria-controls="collapse{{answer.id}}">
             {{answer.title}}
           </button>
         </h5>
