--- a/mainapp/templates/mainapp/guide_page.html
+++ b/mainapp/templates/mainapp/guide_page.html
@@ -30,7 +30,7 @@
 			{% with blocks=self.body %}
 			{% for block in blocks %}
 			{% if block.block_type == 'heading' %}
-			<h2>{{ block.value }}</h2>
+				{% include_block block %}
 			{% else %}
 			<section class="block-{{ block.block_type }}">
 				{{ block }}
