Adding custom HeadingBlock to GuidePage and adding a link in FAQ to easily share an answer

--- a/mainapp/templates/mainapp/faq.html
+++ b/mainapp/templates/mainapp/faq.html
@@ -19,6 +19,7 @@
           <button class="btn btn-link faq-title" data-toggle="collapse" data-target="#collapse{{answer.id}}" aria-expanded="true" aria-controls="collapse{{answer.id}}">
             {{answer.title}}
           </button>
+          <a class="btn btn-link float-right" href="{{answer.url}}"><i class="fas fa-link"></i></a>
         </h5>
       </div>
 
